tooling/nargo_cli/tests/snapshots/execution_success/regression_6451/execute__tests__regression_6451_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: Unsafe block must have a safety comment above it
  ┌─ src/main.nr:3:13
  │
3 │     let y = unsafe { empty(x) };
  │             ------ The comment must start with the "Safety: " word
  │
